--- a/music_player/index.html
+++ b/music_player/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link type="text/css" rel="stylesheet" href="./font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="./font-awesome/css/font-awesome.css" />
     <link type="text/css" rel="stylesheet" href="./main.css" />
     <style>
         .range:before {
